# fast-mcp-demo-client

./: LLM_Tool_Bind.py  main.py  pyproject.toml  requirements.txt
